--- a/package.json
+++ b/package.json
@@ -13,26 +13,26 @@
     "clsx": "^2.1.1",
     "d3-interpolate": "^3.0.1",
     "d3-scale": "^4.0.2",
-    "geist": "^1.4.2",
-    "lucide-react": "^0.511.0",
-    "next": "15.3.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "geist": "^1.2.0",
+    "lucide-react": "^0.294.0",
+    "next": "14.0.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-simple-maps": "^3.0.0",
-    "recharts": "^2.15.3",
-    "tailwind-merge": "^3.3.0",
+    "recharts": "^2.10.3",
+    "tailwind-merge": "^2.2.0",
     "topojson-client": "^3.1.0",
-    "zustand": "^5.0.5"
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
+    "@eslint/eslintrc": "^3.0.0",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.2",
-    "tailwindcss": "^4",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "14.0.4",
+    "tailwindcss": "^3.4.17",
     "tw-animate-css": "^1.3.0",
     "typescript": "^5"
   }
